// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio matches disabled snapshot 1`] = `
<label
  aria-disabled={true}
  className="sc-hKMtZM esvHSN"
>
  <input
    aria-disabled={true}
    className="sc-eCYdqJ fazssI"
    type="radio"
  />
  Disabled
</label>
`;

exports[`Radio matches snapshot 1`] = `
<label
  className="sc-hKMtZM daFlrm"
>
  <input
    className="sc-eCYdqJ lbbITm"
    type="radio"
  />
  Click Me
</label>
`;
